+index.html - Los tags son <meta asdf>, no <meta asdf/>. Lo mismo con <link> - El viewport estaba dos veces, se eliminó uno. - Se movió el viewport a la segunda línea del head, si o si tiene que ir en ese orden (primero charset, luego viewport, luego el resto). - Se modificó el icono del sitio. No tiene sentido colocar "shortcut icon" si se va a usar un .png, esto solo acepta .ico. Se modificó el tipo igualmente - Comenté el antiguo navbar, no sabía si eliminarlo - Dejé el header y navbar listo, con un botón para ver carro de compra
+estilo.css
- Se eliminó el ul,ol, eso se hace dandole una clase aparte, no modificando todas las listas
- Arreglé la fuente, no la estaba importando ni llamando correctamente

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,13 +1,32 @@
+/* IMPORTACIONES */
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+
+/* GENERALES */
 * {
     box-sizing: border-box;
 }
 body {
-    margin: 0
+    font-family: 'Open Sans', sans-serif;
 }
-img {
-    display:block;
-    width:100%;
+
+/* OVERRIDE EL TEXTAREA DE BOOTSTRAP PARA EL SEARCH */
+@media (max-width: 767px){
+    .text_area{
+        display: inline-block;
+        width: calc(100% - 42px)!important;
+        vertical-align: middle;1
+    }
+} 
+
+/* Listas */
+ul.nolist {
+    list-style-type: none;
 }
+
+
+
+/* Los que habían */
+
 .main-header {
     padding: 0 20px;
 }
@@ -43,22 +62,12 @@ img {
     display: block;
     padding: 10px;
 }
-ul,ol{
-    list-style: none;
-}
-
-body {
-    font-family: Open sans;
-}
 
 .slideshow{
     width: 100%;
     position: relative;
 }
 
-.slider li, ul{
-    width: 100%;
-}
 
 .slider li{
     overflow: hidden;
