--- a/css/estilos.css
+++ b/css/estilos.css
@@ -14,8 +14,10 @@ body {
     .text_area{
         display: inline-block;
         width: calc(100% - 42px)!important;
-        vertical-align: middle;1
+        vertical-align: middle;
     }
+
+    
 } 
 
 /* Listas */
@@ -139,6 +141,7 @@ ul.nolist {
     right: 10px;
 }
 
+
 @media screen and (max-width: 600px){
     .slider .caption p{
         display: none;
@@ -159,4 +162,38 @@ ul.nolist {
     .pagination{
         display: none;
     }
+
+    
 }
+
+/* Estilos carousel */
+.carousel-item{
+    max-height: 350px;
+}
+
+@media screen and (min-width: 1200px) {
+    .carousel-item{
+        max-width: auto;
+    }
+}
+
+.carousel-caption{
+    background-color: white;
+    opacity: 0.4;
+    color: black;
+}
+
+.card-deck {
+    margin-left: 0px;
+    margin-right: 0px;
+}
+
+.card-img{
+    width: 100%;
+    height: 35vw;
+    object-fit: cover;
+}
+
+
+
+
