--- a/css/estilos.css
+++ b/css/estilos.css
@@ -230,7 +230,7 @@ ul.nolist {
 
 @media screen and (max-width: 768px) {
     .catalogo{
-        max-width: auto;
+        max-width: none;
         
     }
 }
