--- a/css/estilos.css
+++ b/css/estilos.css
@@ -219,6 +219,15 @@ ul.nolist {
     text-decoration: none;
 }
 
+.producto{
+    color: inherit;
+}
+
+.producto:hover{
+    color: inherit;
+    text-decoration: none ;
+}
+
 .fa-plus-square{
     font-size: 20px;
 }
