quitado el fondo de imagen

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -209,7 +209,7 @@ ul.nolist {
     object-fit: cover;
 }
 
-.linkCatalogo, .entrega{
+.linkCatalogo{
     color: inherit;
     
 }
@@ -217,15 +217,6 @@ ul.nolist {
 .linkCatalogo:hover{
     color: inherit;
     text-decoration: none;
-}
-
-.producto{
-    color: inherit;
-}
-
-.producto:hover{
-    color: inherit;
-    text-decoration: none ;
 }
 
 .fa-plus-square{
