Revert "quitado el fondo de imagen"
This reverts commit 799044d56bfc6f38a3e0f6c7bb3ed14fdf4ae7fe.

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -209,7 +209,7 @@ ul.nolist {
     object-fit: cover;
 }
 
-.linkCatalogo{
+.linkCatalogo, .entrega{
     color: inherit;
     
 }
@@ -217,6 +217,15 @@ ul.nolist {
 .linkCatalogo:hover{
     color: inherit;
     text-decoration: none;
+}
+
+.producto{
+    color: inherit;
+}
+
+.producto:hover{
+    color: inherit;
+    text-decoration: none ;
 }
 
 .fa-plus-square{
