--- a/css/estilos.css
+++ b/css/estilos.css
@@ -340,18 +340,43 @@ ul.nolist {
   }
 }
 
-.contacto_form{  
-  width: 460px; 
-  height: auto;
-  margin: 80px auto;
-  border-radius: 10px;  
-  padding-top: 30px;
-  padding-bottom: 20px;  
-  background-color: #fbfbfb; 
-  padding-left: 30px; 
+.contacto-form{  
+  width: 500px;
+  margin: auto;
+  border-radius: 10px;
+  background-color: #fbfbfb;
+}
+.formulario{
+  padding: 1%;
 }
 
-button{
+.mensaje {
+  width: 100%;
+  height: 200px;
+  border: 1px solid #017bab;
+  margin-bottom: 15px;
+  padding: 11px 10px;
+  background: white;
+  font-size: 14px;
+  font-weight: bold;
+  resize: none;
+}
+.formulario h1 {
+  margin: 0;
+  text-align: left;
+  height: 40px;
+  margin-bottom: 30px;
+  font-size: 40px;
+}
+
+.formulario p{
+    width: 100%;
+    text-align: left;
+    font-size: 14px; 
+    font-weight: bold;
+  }
+
+/* button{
   height: 45px; 
   padding-left: 5px;
   padding-right: 5px;   
@@ -363,6 +388,6 @@ button{
   border-style: solid; 
   border-radius: 10px;  
   width: 420px;   
-  cursor: pointer;
-}
+  cursor: pointer; 
+}*/
 
