--- a/css/estilos.css
+++ b/css/estilos.css
@@ -108,9 +108,20 @@ ul.nolist {
   list-style-type: none;
 }
 
+/* Navbar y footer Logo*/
+.navbar-brand img {
+    height: 30px;
+    width: auto;
+}
+.main-footer .logo {
+    height: auto;
+    width: 90%;
+    max-width: 400px;
+}
+
 /* Altura mínima página */
 .main-body {
-  height: 1000px;
+  height: 900px;
 }
 
 .footer-hr {
@@ -121,6 +132,15 @@ ul.nolist {
 .main-footer .fab {
   font-size: 20px;
   vertical-align: middle;
+}
+
+.foot-list a {
+    text-decoration: none;
+    color: inherit;
+}
+
+.foot-list a:hover {
+    color: cyan;
 }
 
 /* Los que habían */
