--- a/css/estilos.css
+++ b/css/estilos.css
@@ -382,15 +382,13 @@ ul.nolist {
     font-weight: bold;
   }
 
-/* button{
-  height: 45px; 
-  padding-left: 5px;
-  padding-right: 5px;   
-  margin-bottom: 20px; 
-  margin-top: 10px;   
-  text-transform: uppercase;
-  background-color: #ffffff; 
-  border-color: #000000; 
-  border-style: solid; 
-  border-radius: 10px;  
+#imagen{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+#titulo, #categoria, #descripcion{
+  text-transform: capitalize;
+}
 
