Agregar página register, carro

--- a/changeWear/pages/templates/pages/categoria.html
+++ b/changeWear/pages/templates/pages/categoria.html
@@ -4,15 +4,16 @@
 {% block content %}
 <main>
     <div class="container">
-        <h1 class="display-4 my-3">Niños</h1>
+        <h1 class="display-4 my-3">{{nombre}}</h1>
         <div class="row row-cols-sm-12 row-cols-md-2 row-cols-lg-3">
             {% for producto in productos%}
-            <div class="col">
-                <div class="card">
+            <div class="col ">
+                <div class="card border shadow-sm m-2">
                     <img src="{{producto.imagen.url}}" alt="">
                     <div class="card-body">
                         <h2 class="card-title">{{producto.titulo}}</h2>
                         <p class="card-text">$ {{producto.precio}}</p>
+                        <a href="{% url 'producto_page' producto.id%}" class="stretched-link"></a>
                     </div>
                 </div>
             </div>
