Carro js, carro navbar, registrarse y logearse

--- a/changeWear/pages/templates/pages/register.html
+++ b/changeWear/pages/templates/pages/register.html
@@ -21,7 +21,7 @@
                     {{formCliente.apellido_paterno}}
                     <label for="{{formCliente.appellido_materno.name}}"class="form-label">Apellido Materno</label>
                     {{formCliente.apellido_materno}}
-                    <label for="{{formUser.email.name}}">Dirección de Correo</label>
+                    <label for="{{formUser.email.name}}">Dirección de Correo <small class="text-danger">Iniciarás sessión con tu correo</small></label>
                     {{formUser.email}}
                     <label for="{{formCliente.telefono.name}}"class="form-label">Número teléfono</label>
                     {{formCliente.telefono}}
