--- a/changeWear/pages/templates/pages/navbar.html
+++ b/changeWear/pages/templates/pages/navbar.html
@@ -26,13 +26,27 @@
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarCarrito" role="button" data-bs-toggle="dropdown" aria-expanded="false">
           <i class="fas fa-shopping-cart"></i>
+          {% if carro == None%}
+          <span class="badge bg-danger">0</span>
+          {%else%}
+          <span class="badge bg-danger">{{carro}}</span>
+          {%endif%}
         </a>
         <div class="dropdown-menu dropdown-menu-lg-left" aria-labelledby="navbarCarrito">
           <div id="carritoNavbar" class="p-3">
-            <a class="dropdown-item" href="#">Sin productos...</a>
+            {% if items == None%}
+            <a class="dropdown-item" href="#">Sin productos</a>
+            {%else%}
+              {% for item in items%}
+                <div class="d-flex justify-content-between">
+                  <a class="dropdown-item" href="#">{{item.producto.titulo}}</a>
+                  <p>${{item.producto.precio}}</p>
+                </div>
+              {% endfor %}
+            {%endif%}
           </div>
           <div class="dropdown-divider"></div>
-          <a class="btn btn-dark mx-2" role="button" href="#">Ver Carro</a>
+          <a class="btn btn-dark mx-2" role="button" href="{% url 'carro_page'%}">Ver Carro</a>
         </div>
       </li>
       <li class="nav-item my-sm-1 mx-lg-2">
