--- a/changeWear/pages/templates/pages/navbar.html
+++ b/changeWear/pages/templates/pages/navbar.html
@@ -50,7 +50,7 @@
         </div>
       </li>
       <li class="nav-item my-sm-1 mx-lg-2">
-        <a class="btn btn-info" href="#">
+        <a class="btn btn-info" href="{% url 'login_page'%}">
           <i class="fas fa-user"></i>
         </a>
       </li>
